istio-ingress-gateway-virtual-service.yml
# See more at https://istio.io/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderprocessing-gateway
  namespace: playground
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 31400
        name: http-orderprocessing
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orderprocessing-vs
  namespace: playground
spec:
  hosts:
    - "*"
  gateways:
    - orderprocessing-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: orderprocessing-bff-svc
            port:
              number: 6001
